Add add user and users list html

--- a/src/main/resources/templates/admin-panel.html
+++ b/src/main/resources/templates/admin-panel.html
@@ -9,15 +9,15 @@
 <body>
 
 <div class="md:block">
-    <h1 class="mx-7 mt-8 mb-12 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl dark:text-white">
+    <h1 class="header">
         Panel administratora</h1>
     <div class="flex flex-row">
-        <button type="button"
-                class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mx-7 my-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
+        <button th:onclick="|window.location.href='/admin/users-list'|" type="button"
+                class="btn-primary">
             Lista użytkowników
         </button>
-        <button type="button"
-                class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mx-5 my-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
+        <button th:onclick="|window.location.href='/admin/add-user'|" type="button"
+                class="btn-primary">
             Dodaj użytkownika
         </button>
     </div>
