--- a/src/main/resources/templates/users-list.html
+++ b/src/main/resources/templates/users-list.html
@@ -3,8 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" th:href="@{/css/main.css}"/>
 </head>
 <body>
+
+<div class="md:block">
+    <h1 class="header">Lista użytkowników</h1>
+    <div class="flex flex-row">
+        <button th:onclick="|window.location.href='/admin'|" type="button"
+                class="btn-primary">
+            Powrót
+        </button>
+    </div>
+</div>
 
 </body>
 </html>
