Added user info page

--- a/src/main/resources/templates/user-info.html
+++ b/src/main/resources/templates/user-info.html
@@ -8,13 +8,7 @@
 <body>
 
 <div class="md:block">
-    <h1 class="header">Lista użytkowników</h1>
-    <div class="flex flex-row">
-        <button th:onclick="|window.location.href='/admin/user-info'|" type="button"
-                class="btn-primary">
-            Konto użytkownika
-        </button>
-    </div>
+    <h1 class="header">Konto użytkownika</h1>
     <div class="flex flex-row">
         <button th:onclick="|window.location.href='/admin'|" type="button"
                 class="btn-primary">
