add internationalization to thymeleaf

--- a/src/main/resources/templates/users-list.html
+++ b/src/main/resources/templates/users-list.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" th:href="@{/css/main.css}"/>
 </head>
-<body>
+<body class="background">
 
 <div class="md:block">
     <h1 class="header">Lista użytkowników</h1>
+    <table>
+        <thead>
+        <tr>
+           <th th:text="#{hello_world}"></th>
+        </tr>
+        </thead>
+    </table>
     <div class="flex flex-row">
         <button th:onclick="|window.location.href='/admin'|" type="button"
                 class="btn-primary">
