--- a/src/main/resources/static/css/style.tailwind.css
+++ b/src/main/resources/static/css/style.tailwind.css
@@ -9,4 +9,9 @@
     .header {
         @apply mx-7 mt-8 mb-12 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl dark:text-white;
     }
+
+    .background {
+        @apply min-h-screen w-full bg-gray-50 dark:bg-gray-800;
+    }
+
 }
