--- a/src/main/resources/templates/users-list.html
+++ b/src/main/resources/templates/users-list.html
@@ -17,9 +17,12 @@
         </thead>
     </table>
     <div class="flex flex-row">
-        <button th:onclick="|window.location.href='/admin'|" type="button"
-                class="btn-primary">
-            Powrót
+        <button type="button" class="btn-primary">
+            <a th:text="#{return}"
+               th:href="'/'
+            + ${@localeContextHolderWrapper.getLocaleContext().getLocale()}
+            + '/admin'"
+            ></a>
         </button>
     </div>
 </div>
