--- a/src/main/resources/templates/user-info.html
+++ b/src/main/resources/templates/user-info.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -8,12 +8,15 @@
 <body>
 
 <div class="md:block">
-    <h1 class="header">Konto użytkownika</h1>
+    <h1 class="header" th:text="${accountInfoEntity.getEmail()}" ></h1>
     <div class="flex flex-row">
-        <button th:onclick="|window.location.href='/admin'|" type="button"
-                class="btn-primary">
-            Powrót
-        </button>
+        <a th:href="@{{context_path}/{locale}/admin(
+                locale=${@localeContextHolderWrapper.getLocaleContext().getLocale()},
+                context_path=${#httpServletRequest.getContextPath()})}"
+        >
+            <button type="button" class="btn-primary" th:text="#{return}"/>
+
+        </a>
     </div>
 </div>
 
