--- a/src/main/resources/static/css/style.tailwind.css
+++ b/src/main/resources/static/css/style.tailwind.css
@@ -14,4 +14,12 @@
         @apply min-h-screen w-full bg-gray-50 dark:bg-gray-800;
     }
 
+    .input {
+        @apply appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500 disabled:opacity-60;
+    }
+
+    .inputLabel {
+        @apply block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2;
+    }
+
 }
