--- a/src/main/resources/templates/user-info.html
+++ b/src/main/resources/templates/user-info.html
@@ -8,41 +8,35 @@
 <body class="background">
 
 <div>
-    <!--    <h1 class="header" th:text="${accountInfoEntity.getEmail()}" ></h1>-->
-    <!--    <div class="flex flex-row">-->
-    <!--        <a th:href="@{{context_path}/{locale}/admin(-->
-    <!--                locale=${@localeContextHolderWrapper.getLocaleContext().getLocale()},-->
-    <!--                context_path=${#httpServletRequest.getContextPath()})}"-->
-    <!--        >-->
-    <!--            <button type="button" class="btn-primary" th:text="#{return}"/>-->
-
-    <!--        </a>-->
-    <!--    </div>-->
     <div class="mt-8 mb-12 mx-auto grid place-items-center">
-        <h2 class="mt-8 mb-12 text-3xl font-extrabold tracking-tight leading-none text-gray-900 md:text-3xl lg:text-3xl dark:text-white;" th:text="#{user_info}"></h2>
+        <h2 class="mt-8 mb-12 text-3xl font-extrabold tracking-tight leading-none text-gray-900 md:text-3xl lg:text-3xl dark:text-white uppercase"
+            th:text="#{user_info}"></h2>
         <form class="w-full max-w-lg">
-            <div class="flex flex-wrap -mx-3 mb-6">
+            <div class="flex flex-wrap -mx-3 mb-4">
                 <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
-                    <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
+                    <label class="inputLabel"
                            for="grid-first-name" th:text="#{first_name}"/>
-                    <input class="appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
-                           id="grid-first-name" type="text" disabled="disabled" th:value="${accountInfoEntity.getUserInfoEntity().getFirstName()}">
-<!--                    <p class="text-red-500 text-xs italic">Please fill out this field.</p>-->
+                    <input class="input"
+                           id="grid-first-name" type="text" disabled="disabled"
+                           th:value="${accountInfoEntity.getUserInfoEntity().getFirstName()}">
+                    <!--<p class="text-red-500 text-xs italic">Please fill out this field.</p>-->
                 </div>
                 <div class="w-full md:w-1/2 px-3">
-                    <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
+                    <label class="inputLabel"
                            for="grid-last-name" th:text="#{last_name}"/>
-                    <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                           id="grid-last-name" type="text" th:value="${accountInfoEntity.getUserInfoEntity().getLastName()}">
+                    <input class="input"
+                           id="grid-last-name" type="text" disabled="disabled"
+                           th:value="${accountInfoEntity.getUserInfoEntity().getLastName()}">
                 </div>
             </div>
-            <div class="flex flex-wrap -mx-3 mb-6">
+            <div class="flex flex-wrap -mx-3 mb-4">
                 <div class="w-full px-3">
-                    <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
-                           for="grid-password" th:text="#{email}" />
-                    <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                           id="grid-password" type="email" disabled="disabled" th:value="${accountInfoEntity.getEmail()}">
-<!--                    <p class="text-gray-600 text-xs italic">Make it as long and as crazy as you'd like</p>-->
+                    <label class="inputLabel"
+                           for="grid-password" th:text="#{email}"/>
+                    <input class="input"
+                           id="grid-password" type="email" disabled="disabled"
+                           th:value="${accountInfoEntity.getEmail()}">
+                    <!--<p class="text-gray-600 text-xs italic">Make it as long and as crazy as you'd like</p>-->
                 </div>
             </div>
         </form>
