--- a/src/main/resources/static/css/style.tailwind.css
+++ b/src/main/resources/static/css/style.tailwind.css
@@ -14,4 +14,9 @@
         @apply min-h-screen w-full bg-gray-50 dark:bg-gray-800;
     }
 
+    body {
+        @apply min-h-screen flex flex-col;
+    }
+
 }
+
