--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -8,16 +8,16 @@
 <body>
 
 <div th:fragment="header" class="flex flex-row">
-        <a th:href="@{{context_path}/{locale}/admin(
-                locale=${@localeContextHolderWrapper.getLocaleContext().getLocale()},
-                context_path=${#httpServletRequest.getContextPath()})}"
-        >
-            <button type="button" th:text="#{return}"/>
-        </a>
+    <a
+            th:replace="fragments/link.html::admin-link(~{::button})"
+    >
+        <button type="button" class="btn-primary" th:text="#{return}"/>
+
+    </a>
 </div>
 
-<div th:fragment="footer" class="mt-auto w-full h-16 justify-center ">
-    <p th:text="#{copyright}" class="inline-block"></p>
+<div th:fragment="footer" class="mt-auto w-full h-16 grid place-items-center">
+    <p th:text="#{copyright}" class="inline-block dark:text-white"></p>
 </div>
 
 
