--- a/src/main/resources/templates/users-list.html
+++ b/src/main/resources/templates/users-list.html
@@ -7,6 +7,10 @@
 </head>
 <body class="background">
 
+
+<div th:replace="fragments/common.html::header"></div>
+
+
 <div class="md:block">
     <h1 class="header" th:text="#{user_list}"></h1>
     <table>
@@ -16,14 +20,13 @@
         </thead>
     </table>
     <div class="flex flex-row">
-        <a th:href="@{{context_path}/{locale}/admin(
-                locale=${@localeContextHolderWrapper.getLocaleContext().getLocale()},
-                context_path=${#httpServletRequest.getContextPath()})}"
-        >
+       <a th:replace="fragments/link.html::admin-link(~{::button})">
             <button type="button" class="btn-primary" th:text="#{return}"/>
         </a>
     </div>
 </div>
+
+<div th:replace="fragments/common.html::footer"> </div>
 
 </body>
 </html>
