--- a/src/main/resources/static/css/style.tailwind.css
+++ b/src/main/resources/static/css/style.tailwind.css
@@ -7,7 +7,7 @@
         @apply text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 my-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800;
     }
     .header {
-        @apply mt-8 mb-12 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl dark:text-white;
+        @apply mt-8 mb-12 text-4xl font-extrabold tracking-tight leading-none text-gray-900 text-5xl dark:text-white;
     }
 
     .background {
@@ -15,7 +15,7 @@
     }
 
     .input {
-        @apply appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500 disabled:opacity-60;
+        @apply appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500 disabled:opacity-60;
     }
 
     .inputLabel {
