--- a/src/main/resources/static/css/style.tailwind.css
+++ b/src/main/resources/static/css/style.tailwind.css
@@ -6,8 +6,9 @@
     .btn-primary {
         @apply text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 my-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800;
     }
+
     .header {
-        @apply mt-8 mb-12 text-4xl font-extrabold tracking-tight leading-none text-gray-900 text-5xl dark:text-white;
+        @apply mb-12 text-4xl font-extrabold tracking-tight leading-none text-gray-900 text-5xl dark:text-gray-200;
     }
 
     .background {
@@ -15,15 +16,23 @@
     }
 
     .input {
-        @apply appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500 disabled:opacity-60;
+        @apply appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white dark:bg-gray-300 dark:focus:bg-gray-200 focus:border-gray-500 disabled:opacity-60;
     }
 
     .inputLabel {
-        @apply block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2;
+        @apply block uppercase tracking-wide text-gray-700 dark:text-gray-200 text-xs font-bold mb-2;
     }
 
     body {
         @apply min-h-screen flex flex-col;
+    }
+
+    .form-error {
+        @apply text-red-700 dark:text-orange-500 text-sm;
+    }
+
+    .form-success {
+        @apply text-base text-green-700 dark:text-green-400;
     }
 
 }
