--- a/src/main/resources/templates/user-info.html
+++ b/src/main/resources/templates/user-info.html
@@ -10,136 +10,142 @@
             $("#edit-button").click(function () {
                 $("input.editable-input").prop("disabled", false);
                 $("select.editable-input").prop("disabled", false);
+                $("#edit-button").hide();
+                $("#submit-button").show();
             });
         });
     </script>
 </head>
 <body class="background">
 
-<div>
-    <div class="mt-8 mb-12 grid place-items-center">
-        <h2 class="mt-8 mb-12 text-3xl font-extrabold tracking-tight leading-none text-gray-900 text-3xl dark:text-white uppercase"
-            th:text="#{user_info}"></h2>
-        <form action="#" class="w-full max-w-3xl"
-              method="post" th:action="@{/admin/user-info/{id}(id = ${accountInfoEntity.getId()})}"
-              th:object="${DTO}">
-            <div class="flex flex-wrap -mx-3 mb-4">
-                <div class="w-full w-1/2 px-3 mb-0">
-                    <label class="inputLabel"
-                           for="grid-first-name" th:text="#{first_name}"/>
-                    <input class="input editable-input" disabled="disabled"
-                           id="grid-first-name" th:field="*{firstName}" type="text">
-                </div>
-                <div class="w-full w-1/2 px-3">
-                    <label class="inputLabel"
-                           for="grid-last-name" th:text="#{last_name}"/>
-                    <input class="input editable-input" disabled="disabled"
-                           id="grid-last-name" th:field="*{lastName}" type="text">
-                </div>
-            </div>
-            <div class="flex flex-wrap -mx-3 mb-4 px-3">
+<div th:replace="fragments/common.html::header"></div>
+
+<div class="mb-5 grid place-items-center">
+    <h2 class="text-3xl uppercase header"
+        th:text="#{user_info}"></h2>
+    <form action="#" class="w-full max-w-3xl"
+          method="post" th:action="@{/admin/user-info/{id}(id = ${accountInfoEntity.getId()})}"
+          th:object="${DTO}">
+        <div class="flex flex-wrap -mx-3 mb-4">
+            <div class="w-full w-1/2 px-3 mb-0">
                 <label class="inputLabel"
-                       for="grid-password" th:text="#{email}"/>
+                       for="grid-first-name" th:text="#{first_name}"/>
                 <input class="input editable-input" disabled="disabled"
-                       id="grid-password" th:field="*{email}" type="email">
+                       id="grid-first-name" th:field="*{firstName}" type="text">
+                <ul th:if="${#fields.hasErrors('firstName')}">
+                    <li class="form-error" th:each="err : ${#fields.errors('firstName')}" th:text="#{${err}}"/>
+                </ul>
             </div>
-            <div class="flex flex-wrap -mx-3 mb-4">
-                <div class="w-full w-1/2 px-3 mb-0">
-                    <label class="inputLabel" for="grid-first-name" th:text="#{enabled}"/>
-                    <div class="relative">
-                        <select class="editable-input block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                                disabled="disabled"
-                                id="grid-enabled"
-                                th:field="*{enabled}">
-                            <option th:selected="${accountInfoEntity.isEnabled()}" th:text="#{true}" th:value="true"/>
-                            <option th:selected="${accountInfoEntity.isEnabled()}" th:text="#{false}" th:value="false"/>
-                        </select>
-                        <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
-                            <svg class="fill-current h-4 w-4" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/>
-                            </svg>
-                        </div>
+            <div class="w-full w-1/2 px-3">
+                <label class="inputLabel"
+                       for="grid-last-name" th:text="#{last_name}"/>
+                <input class="input editable-input" disabled="disabled"
+                       id="grid-last-name" th:field="*{lastName}" type="text">
+                <ul th:if="${#fields.hasErrors('lastName')}">
+                    <li class="form-error" th:each="err : ${#fields.errors('lastName')}" th:text="#{${err}}"/>
+                </ul>
+            </div>
+        </div>
+        <div class="flex flex-wrap -mx-3 mb-4 px-3">
+            <label class="inputLabel"
+                   for="grid-password" th:text="#{email}"/>
+            <input class="input editable-input" disabled="disabled"
+                   id="grid-password" th:field="*{email}" type="email">
+            <ul th:if="${#fields.hasErrors('email')}">
+                <li class="form-error" th:each="err : ${#fields.errors('email')}" th:text="#{${err}}"/>
+            </ul>
+        </div>
+        <div class="flex flex-wrap -mx-3 mb-4">
+            <div class="w-full w-1/2 px-3 mb-0">
+                <label class="inputLabel" for="grid-first-name" th:text="#{enabled}"/>
+                <div class="relative">
+                    <select class="input editable-input block"
+                            disabled="disabled"
+                            id="grid-enabled"
+                            th:field="*{enabled}">
+                        <option th:selected="${accountInfoEntity.isEnabled()}" th:text="#{true}" th:value="true"/>
+                        <option th:selected="${accountInfoEntity.isEnabled()}" th:text="#{false}" th:value="false"/>
+                    </select>
+                    <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
+                        <svg class="fill-current h-4 w-4" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/>
+                        </svg>
                     </div>
                 </div>
-                <div class="w-full w-1/2 px-3 mb-0">
-                    <label class="inputLabel" for="grid-first-name" th:text="#{confirmed}"/>
-                    <input class="input"
-                           disabled="disabled" id="grid-confirmed" th:value="#{${accountInfoEntity.isConfirmed()}}"
-                           type="text">
-                </div>
-            </div>
-            <div class="flex flex-wrap -mx-3 mb-4">
-                <div class="w-full w-1/2 px-3 mb-0">
-                    <label class="inputLabel"
-                           for="grid-first-name" th:text="#{last_login}"/>
-                    <input class="input"
-                           disabled="disabled" id="grid-last_login" th:value="${accountInfoEntity.getLastLogin()}"
-                           type="text">
-                    <!--<p class="text-red-500 text-xs italic">Please fill out this field.</p>-->
-                </div>
-                <div class="w-full w-1/2 px-3">
-                    <label class="inputLabel"
-                           for="grid-last-name" th:text="#{last_login_ip}"/>
-                    <input class="input"
-                           disabled="disabled" id="grid-last_login_ip" th:value="${accountInfoEntity.getLastLoginIp()}"
-                           type="text">
-                </div>
-            </div>
-            <div class="flex flex-wrap -mx-3 mb-4">
-                <div class="w-full w-1/2 px-3 mb-0">
-                    <label class="inputLabel"
-                           for="grid-first-name" th:text="#{last_fail_login}"/>
-                    <input class="input"
-                           disabled="disabled" id="grid-last_fail_login"
-                           th:value="${accountInfoEntity.getLastFailLogin()}"
-                           type="text">
-                </div>
-                <div class="w-full w-1/2 px-3">
-                    <label class="inputLabel"
-                           for="grid-last-name" th:text="#{last_fail_login_ip}"/>
-                    <input class="input"
-                           disabled="disabled" id="grid-last_fail_login_ip"
-                           th:value="${accountInfoEntity.getLastFailLoginIp()}"
-                           type="text">
-                </div>
-            </div>
-            <div class="flex flex-wrap -mx-3 mb-4">
-                <div class="w-full w-1/2 px-3 mb-0">
-                    <label class="inputLabel"
-                           for="grid-first-name" th:text="#{last_password_change}"/>
-                    <input class="input"
-                           disabled="disabled" id="grid-last_password_change"
-                           th:value="${accountInfoEntity.getLastPasswordChange()}"
-                           type="text">
-                </div>
-                <div class="w-full w-1/2 px-3">
-                    <label class="inputLabel"
-                           for="grid-last-name" th:text="#{last_password_change_ip}"/>
-                    <input class="input"
-                           disabled="disabled" id="grid-last_password_change_ip"
-                           th:value="${accountInfoEntity.getLastPasswordChangeIp()}"
-                           type="text">
-                </div>
-            </div>
-            <div class="flex flex-row mb-5">
-                <p class="text-base text-green-700 dark:text-white" th:if="${showSuccess != null}"
-                   th:text="#{successfully_edited_user_info}"/>
-            </div>
-            <div class="flex flex-row">
-                <input class="btn-primary editable-input" disabled="disabled" id="submit" type="submit"/>
-            </div>
-            <div th:if="${#fields.hasAnyErrors()}">
-                <ul>
-                    <li th:each="err : ${#fields.allErrors()}" th:text="${err}" />
+                <ul th:if="${#fields.hasErrors('enabled')}">
+                    <li class="form-error" th:each="err : ${#fields.errors('enabled')}" th:text="#{${err}}"/>
                 </ul>
-                <p>weowiepowi</p>
             </div>
-        </form>
-        <div class="flex flex-row mb-10">
-            <button class="btn-primary" id="edit-button" th:text="#{edit}" type="button"/>
+            <div class="w-full w-1/2 px-3 mb-0">
+                <label class="inputLabel" for="grid-first-name" th:text="#{confirmed}"/>
+                <input class="input"
+                       disabled="disabled" id="grid-confirmed" th:value="#{${accountInfoEntity.isConfirmed()}}"
+                       type="text">
+            </div>
         </div>
-    </div>
+        <div class="flex flex-wrap -mx-3 mb-4">
+            <div class="w-full w-1/2 px-3 mb-0">
+                <label class="inputLabel"
+                       for="grid-first-name" th:text="#{last_login}"/>
+                <input class="input"
+                       disabled="disabled" id="grid-last_login" th:value="${accountInfoEntity.getLastLogin()}"
+                       type="text">
+                <!--<p class="text-red-500 text-xs italic">Please fill out this field.</p>-->
+            </div>
+            <div class="w-full w-1/2 px-3">
+                <label class="inputLabel"
+                       for="grid-last-name" th:text="#{last_login_ip}"/>
+                <input class="input"
+                       disabled="disabled" id="grid-last_login_ip" th:value="${accountInfoEntity.getLastLoginIp()}"
+                       type="text">
+            </div>
+        </div>
+        <div class="flex flex-wrap -mx-3 mb-4">
+            <div class="w-full w-1/2 px-3 mb-0">
+                <label class="inputLabel"
+                       for="grid-first-name" th:text="#{last_fail_login}"/>
+                <input class="input"
+                       disabled="disabled" id="grid-last_fail_login"
+                       th:value="${accountInfoEntity.getLastFailLogin()}"
+                       type="text">
+            </div>
+            <div class="w-full w-1/2 px-3">
+                <label class="inputLabel"
+                       for="grid-last-name" th:text="#{last_fail_login_ip}"/>
+                <input class="input"
+                       disabled="disabled" id="grid-last_fail_login_ip"
+                       th:value="${accountInfoEntity.getLastFailLoginIp()}"
+                       type="text">
+            </div>
+        </div>
+        <div class="flex flex-wrap -mx-3 mb-4">
+            <div class="w-full w-1/2 px-3 mb-0">
+                <label class="inputLabel"
+                       for="grid-first-name" th:text="#{last_password_change}"/>
+                <input class="input"
+                       disabled="disabled" id="grid-last_password_change"
+                       th:value="${accountInfoEntity.getLastPasswordChange()}"
+                       type="text">
+            </div>
+            <div class="w-full w-1/2 px-3">
+                <label class="inputLabel"
+                       for="grid-last-name" th:text="#{last_password_change_ip}"/>
+                <input class="input"
+                       disabled="disabled" id="grid-last_password_change_ip"
+                       th:value="${accountInfoEntity.getLastPasswordChangeIp()}"
+                       type="text">
+            </div>
+        </div>
+        <div class="w-full place-items-center grid">
+            <p class="form-success mb-5" th:if="${showSuccess != null}"
+               th:text="#{successfully_edited_user_info}"/>
+            <input class="btn-primary w-64 w-full" hidden="hidden" id="submit-button" type="submit"/>
+            <button class="btn-primary w-64 w-full" id="edit-button" th:text="#{edit}" type="button"/>
+        </div>
+    </form>
 </div>
+
+<div th:replace="fragments/common.html::footer"></div>
 
 </body>
 </html>
